# ComfyUI_Slider_Sidebar

./: README.md  __init__.py  pyproject.toml
sliderData/: flux.json  other.json  pony.json  sd15.json  sdxl.json  version.json
web/: slider_sidebar.js
