[project]
name = "comfyui_slider_sidebar"
description = "A custom node that adds a UI element to the sidebar allowing easy access, navigation, and use of a massive collection (100+) of LECO (Slider) LoRAs. LECOs are an amazing tool to generate variance in your output with a minimal impact to consistency, i.e. deviating form your prompt. They can also allow you access to control parts of your image without taking up CLIP space, saving your token weights for more valuable keywords. If you haven't used them, there's never been a better time to try!"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Kinglord/ComfyUI_Slider_Sidebar"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Slider_Sidebar"
Icon = ""
